--- a/package.json
+++ b/package.json
@@ -4,7 +4,16 @@
   "description": "Bootstrap modal ajax forms and confirmation modals.",
   "main": "modal.js",
   "author": "Data Dog",
-  "license": "MIT",
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/DATA-DOG/bootstrap-modal-form/blob/master/LICENSE"
+    }
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/DATA-DOG/bootstrap-modal-form"
+  },
   "devDependencies": {
     "gulp": "^3.8.11",
     "gulp-rename": "^1.2.2",
