change project name

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "bootstrap-modal-ajax-form",
-  "version": "0.0.1",
+  "name": "bootstrap-modal-form",
+  "version": "0.0.2",
   "homepage": "https://github.com/DATA-DOG/bootstrap-modal-form",
   "authors": [
     "Data Dog"
